--- a/tarea_4_plantilla.ipynb
+++ b/tarea_4_plantilla.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Calificación: 19.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Curso:          Fundamentos de Programación en Python para Macroeconomía y Finanzas     \n",
     "Profesor:       Victor Fuentes Campos     "
    ]
@@ -1030,6 +1037,15 @@
     "plt.title('Proyección del PBI Real Normalizado')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No hay análisis.\n",
+    "\n",
+    "**Calificación: -0.5**"
    ]
   },
   {
